# gpt-oss-jax

./: .gitignore  IMPLEMENTATION_SUMMARY.md  INSTALL.md  MANIFEST.in  OPTIMIZATION_GUIDE.md  PYPI_READY.md  README.md  errerr  gpt-oss-20b  inference.sh  pyproject.toml
examples/: COLAB_TPU_NOTEBOOK_PLAN.md  GPT_OSS_20B_Hybrid_Inference.ipynb  GPT_OSS_20B_MaxText_Inference.ipynb  README.md  jax_inference.ipynb  jax_inference_colab_tpu.ipynb  jax_inference_tpu_v2_bf16.ipynb  jax_inference_tpu_v6e_direct.ipynb  optimization_demo.py  test_fp8_conversion_mac.ipynb
examples/.virtual_documents/: jax_inference.ipynb
gpt-oss-20b-orbax-fp8.orbax-checkpoint-tmp/: _CHECKPOINT_METADATA
gpt_oss/: __init__.py  chat.py  tokenizer.py
gpt_oss/jax/: __init__.py  config.py  inference.py  loader_orbax.py  loader_safetensors.py  model.py  sharding.py  token_generator.py
gpt_oss/jax/quantization/: __init__.py  dtypes.py  mxfp4.py
scripts/: analyze_safetensors_dtypes.py  benchmark_optimizations.py  generate_colab_tpu_notebook.py  generate_tpu_v2_bf16_notebook.py  generate_tpu_v6e_direct_notebook.py  test_fp8_conversion_mac.py  test_mixed_precision_conversion_mac.py
tests/: test_fp8_harmony_inference.py
weights/: .gitkeep  README.md
